refactor: integrating UI with backend